# Scout-Tool

./: README.md  pyproject.toml
scout/: cli.py  portfolio.py
scout.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
